--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@ a
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Flutter 3D Carousel</title>
+  <title>Nike Shop</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
